# benchix

./: BUG.md  Cargo.toml  LICENSE  README.md  build.rs  shell.nix
.cargo/: config.toml
init/: Makefile  init  x.txt
init/src/: init.c  lib.h
kernel/: Cargo.toml
kernel/src/: acpi_handler.rs  console.rs  cpu.rs  elf.rs  fs.rs  gdt.rs  interrupts.rs  lapic.rs  ls  main.rs  memory.rs  panic.rs  scheduler.rs  user.rs  vfs.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/filesystem/: devfs.rs  initrd.rs  mod.rs  ramdisk.rs  vfs.rs
kernel/src/user/: constants.rs  elf.rs  mod.rs  syscalls.rs
kernel/src/user/syscalls/: execve.rs  mod.rs
src/: main.rs
userspace/: Makefile  ramdisk.tar
userspace/src/: echo.c  init.c  ls.c  sh.c
userspace/src/include/: lib.h
